--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <header class="fixed-top" >
         <nav class="navbar navbar-expand-lg bg-warning mb-lg-0">
-            <div class="container-fluid">
+            <div class="container-fluid" >
               <a class="has-text-centered m-2">
                     <img src="img/pokemon.jpg" class="img-fluid" alt="...">
               </a>
-              <a class="navbar-brand" href="https://www.pokemon.com/el/pokedex/" target="_blank">Pokedex</a>
+              <a class="navbar-brand" href="https://www.pokemon.com/el/pokedex/" target="_blank" >Pokedex</a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
 
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Tipos
+                      Mas Tipos...
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" id="Grass" href="#">Cesped</a></li>
